[package]
name = "orml-nft"
description = "Non-fungible token pallet provides basic functions to create and manager NFT"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/nft"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
max-encoded-len = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }
sp-std = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }
sp-runtime = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }

frame-support = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }
frame-system = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }

[dev-dependencies]
sp-io = { git = "https://github.com/centrifuge/substrate", branch = "master" }
sp-core = { git = "https://github.com/centrifuge/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
