[package]
name = "orml-unknown-tokens"
description = "Unknown tokens module that implements `UnknownAsset` trait."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/unknown-tokens"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }
frame-support = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }
frame-system = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }

xcm = { git = "https://github.com/centrifuge/polkadot", default-features = false , branch = "centrifuge" }

orml-xcm-support = { path = "../xcm-support", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/centrifuge/substrate", branch = "master" }
sp-core = { git = "https://github.com/centrifuge/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/centrifuge/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"orml-xcm-support/std",
]
try-runtime = ["frame-support/try-runtime"]
