[package]
name = "orml-xcm-support"
description = "Supporting module for XCM integration."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm-support"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

sp-std = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }
sp-runtime = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }

frame-support = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }

xcm = { git = "https://github.com/centrifuge/polkadot", default-features = false , branch = "centrifuge" }
xcm-executor = { git = "https://github.com/centrifuge/polkadot", default-features = false , branch = "centrifuge" }

orml-traits = { path = "../traits", version = "0.4.1-dev", default-features = false }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"xcm/std",
	"xcm-executor/std",
	"orml-traits/std",
]
